--- a/client/src/pages/order/_order.modules.scss
+++ b/client/src/pages/order/_order.modules.scss
@@ -22,7 +22,7 @@
 
     .cardComponent {
         margin: 0px;
-        width:400px;
+        // width:400px;
         // flex: 0 1 200px !important;
         height: auto;
         max-height: none;
